--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,8 @@
 pa_ppx_simplify Version 0.07
 ----------------------------
 
+* [20 Oct 2020] simplifier works for some examples.  Case-coverage is missing.
+
 * [19 Oct 2020] restart, by copying over hashconsed camlp5 AST and using that as a basis.
 
 pa_ppx_simplify Version 0.01
